# X32-Behringer-Rust

./: .gitignore  .pre-commit-config.yaml  0_build (windows-latest).txt  BRANCH_PROTECTION.md  Cargo.toml  Cargo.toml.patch  DELEGATION_JULES.md  Doxyfile  README.md  TODO.md  config.json  find_x32_ip.py  fix_arc.py  fix_braces.py  fix_deprecated.py  fix_loop.py  fix_scope.py  fix_tests.py  fix_underflow.py  fix_usb_test.py  git-publish.sh  install.sh  notes.txt  parse_scene  parse_scene.rs  patch.diff  patch.py  patch_all_scenes_final.py  patch_client.py  patch_client_node.py  patch_custom_layer.py  patch_desk_restore.py  patch_desk_save.py  patch_desk_save2.py  patch_desk_save3.py  patch_desksave.py  patch_fade.py  patch_geq2.py  patch_get_lib.py  patch_get_lib2.py  (+57 more)
.jules/: bolt.md  (+3 more)
apps/x32_auto_gain/: Cargo.toml  README.md
apps/x32_auto_gain/src/: lib.rs  main.rs
apps/x32_auto_gain/tests/: integration_test.rs
apps/x32_autobeat/: Cargo.toml  README.md  context_log.json
apps/x32_autobeat/src/: audio.rs  compressor.rs  lib.rs  main.rs  musical_theory.rs  network.rs  tests_scaling.rs  ui.rs
apps/x32_crossfade/: Cargo.toml
apps/x32_crossfade/src/: lib.rs  main.rs
apps/x32_dca_spill/: Cargo.toml
apps/x32_dca_spill/src/: lib.rs  main.rs
apps/x32_feedback_detect/: Cargo.toml
apps/x32_feedback_detect/src/: detector.rs  lib.rs  main.rs  mixer.rs  tui.rs
apps/x32_feedback_detect/tests/: integration_test.rs
apps/x32_safe_mute/: Cargo.toml
apps/x32_safe_mute/src/: lib.rs  main.rs
apps/x32_scene_checker/: Cargo.toml
apps/x32_scene_checker/src/: lib.rs  main.rs
apps/x32_scene_checker/tests/: integration_test.rs
apps/x32_speech_mode/: Cargo.toml
apps/x32_speech_mode/src/: lib.rs  main.rs
apps/x32_system_tune/: Cargo.toml
apps/x32_system_tune/src/: lib.rs  main.rs  ui.rs
apps/x32_tapw/: Cargo.toml
apps/x32_tapw/src/: app.rs  lib.rs  main.rs
apps/x32_tapw/tests/: cli.rs
apps/x32_vocal_ducking/: Cargo.toml  README.md
apps/x32_vocal_ducking/src/: lib.rs  main.rs
apps/x32_vocal_ducking/tests/: integration_test.rs
apps/x32_volunteer/: Cargo.toml
apps/x32_volunteer/src/: lib.rs  main.rs  network.rs  state.rs  ui.rs
apps/x32_volunteer/tests/: integration_test.rs
libs/x32_lib/: Cargo.toml  README.md
libs/x32_lib/src/: client.rs  common.rs  error.rs  lib.rs  main_bus.rs  scene_parse.rs  tests.rs
libs/x32_lib/tests/: fx_tests.rs  socket.rs
rust_rewrite/: Cargo.toml  LICENSE  README.md  config.json
rust_rewrite/get_scene_name/: Cargo.toml
rust_rewrite/get_scene_name/src/: main.rs
rust_rewrite/osc_lib/src/: lib.rs  tests.rs
rust_rewrite/x32_automix/: Cargo.toml
rust_rewrite/x32_automix/src/: main.rs
rust_rewrite/x32_command/: Cargo.toml
rust_rewrite/x32_command/src/: main.rs
rust_rewrite/x32_commander/: Cargo.toml
rust_rewrite/x32_commander/src/: main.rs
rust_rewrite/x32_copy_fx/src/: main.rs
rust_rewrite/x32_core/: Cargo.toml
rust_rewrite/x32_core/src/: command_map.rs  commands.rs  lib.rs  logic_fns.rs  node_tree.rs  remote_clients.rs  state.rs  state_management.rs  status.rs
rust_rewrite/x32_custom_layer/: README.md
rust_rewrite/x32_custom_layer/src/: main.rs
rust_rewrite/x32_desk_restore/: Cargo.toml
rust_rewrite/x32_desk_restore/src/: main.rs
rust_rewrite/x32_desk_restore/tests/: integration_test.rs
rust_rewrite/x32_desk_save/: Cargo.toml  test_pattern.txt
rust_rewrite/x32_desk_save/src/: main.rs  nodes.rs
rust_rewrite/x32_desk_save/tests/: integration_test.rs
rust_rewrite/x32_emulator/: Cargo.toml
rust_rewrite/x32_emulator/src/: lib.rs  main.rs
rust_rewrite/x32_fade/: README.md
rust_rewrite/x32_fade/src/: main.rs
rust_rewrite/x32_geq2_cpy/: Cargo.toml
rust_rewrite/x32_geq2_cpy/src/: main.rs
rust_rewrite/x32_geq2cpy/: Cargo.toml
rust_rewrite/x32_geq2cpy/src/: main.rs
rust_rewrite/x32_get_lib/: Cargo.toml  README.md
rust_rewrite/x32_get_lib/src/: main.rs
rust_rewrite/x32_get_lib/tests/: integration_test.rs
rust_rewrite/x32_get_scene/: Cargo.toml
rust_rewrite/x32_get_scene/src/: main.rs
rust_rewrite/x32_get_scene_name/src/: main.rs
rust_rewrite/x32_get_scene_name/tests/: integration_test.rs
rust_rewrite/x32_jog4xlive/: Cargo.toml  README.md
rust_rewrite/x32_jog4xlive/src/: main.rs
rust_rewrite/x32_lib/: Cargo.toml
rust_rewrite/x32_midi2osc/: Cargo.toml  README.md
rust_rewrite/x32_punch_control/: Cargo.toml  README.md
rust_rewrite/x32_reaper/: Cargo.toml  README.md
rust_rewrite/x32_replay/: Cargo.toml  README.md
rust_rewrite/x32_screen_saver/: Cargo.toml  README.md
rust_rewrite/x32_set_preset/: Cargo.toml  README.md
rust_rewrite/x32_set_scene/: Cargo.toml
rust_rewrite/x32_tap/: Cargo.toml  README.md
rust_rewrite/x32_usb/: Cargo.toml
x32_autobeat/: Cargo.toml
x32_autobeat/src/: audio.rs  compressor.rs  main.rs  musical_theory.rs  network.rs  scaling.rs  tests_scaling.rs  ui.rs
x32_command/: Cargo.toml
x32_command/src/: main.rs
x32_command/tests/: cli_tests.rs
x32_dump/: Cargo.toml
x32_dump/src/: main.rs
x32_dump/tests/: cli.rs  integration.rs  multiple_messages_test.rs
x32_jog4xlive/: Cargo.toml  README.md
x32_jog4xlive/src/: main.rs
x32_midi2osc/: Cargo.toml
x32_midi2osc/src/: config.rs  main.rs  rpn.rs  rpn_calc.rs
x32_punch_control/: Cargo.toml
x32_punch_control/src/: config.rs  format.rs  main.rs  state.rs  tests.rs
x32_reaper/: Cargo.toml  README.md
x32_reaper/src/: config.rs  main.rs  reaper_handler.rs  state.rs  x32_handler.rs
x32_ssavergw/: Cargo.toml
x32_ssavergw/src/: main.rs
x32_ssavergw/tests/: integration_test.rs
x32_tapw/: Cargo.toml  README.md
x32_tapw/src/: app.rs  main.rs
x32_tapw/tests/: cli.rs  emulator_test.rs
x32_tcp/: Cargo.toml  README.md
x32_tcp/src/: main.rs
x32_tcp/tests/: integration_test.rs
x32_usb/: Cargo.toml
x32_usb/src/: main.rs
x32_usb/tests/: integration_test.rs
x32_wav_xlive/: Cargo.toml  README.md
x32_wav_xlive/src/: main.rs
x32_wav_xlive/tests/: integration_test.rs
xair_command/: Cargo.toml
xair_command/src/: main.rs
xair_command/tests/: cli.rs
(+470 files in other folders)
