[workspace]
resolver = "2"
members = [
    "osc_lib",
    "x32_lib",
    "x32_core",
    "x32_emulator",
    "x32_autobeat",
    "x32_automix",
    "x32_commander",
    "x32_copy_fx",
    "x32_custom_layer",
    "x32_desk_restore",
    "x32_desk_save",
    "x32_fade",
    "x32_geq2_cpy",
    "x32_get_lib",
    "x32_get_scene",
    "x32_get_scene_name",
    "x32_reaper",
    "x32_replay",
    "x32_set_lib",
    "x32_set_preset",
    "x32_set_scene",
    "x32_tap",
    "x32_tcp",
    "x32_usb",
    "x32_wav_xlive",
    "x32_ssavergw",
    "x32_jog4xlive",
    "x32_punch_control",
    "x32_midi2osc",
    "x32_xlive_wav",
    "xair_get_scene",
    "xair_set_scene",
    "xair_command",
    "x32_cpxlivemarkers",
    "x32_udp",
    "x32_tapw",
    "x32_command",
]
