[workspace]
resolver = "2"
members = [
    "libs/*",
    "apps/*",
    "apps/x32_sync",
    "apps/x32_scene_checker",
    "tools/*",
]

[workspace.dependencies]
# Core Runtime
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"

# CLI & UX
clap = { version = "4.5", features = ["derive"] }

# Serialization & Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# System & Audio
cpal = "0.15"
midir = "0.10"

# Workspace Internal (Path Aliases)
osc_lib = { path = "libs/osc_lib" }
x32_lib = { path = "libs/x32_lib" }
x32_core = { path = "libs/x32_core" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
