[package]
name = "x32_autobeat"
version = "0.1.0"
edition = "2021"

[features]
default = []
audio = ["dep:cpal"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
cpal = { version = "0.15", optional = true }
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
ringbuf = "0.3"
osc_lib = { path = "../osc_lib" }
x32_lib = { path = "../x32_lib" }
rustfft = "6.1"
num-complex = "0.4"
lazy_static = "1.4.0"
