[package]
name = "x32_jog4xlive"
version = "0.1.0"
edition = "2021"
authors = ["Patrick-Gilles Maillot", "Jules"]
description = "Jog for X32 X-Live!"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
x32_lib = { path = "../x32_lib" }
osc_lib = { path = "../osc_lib" }
