[package]
name = "x32_midi2osc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
x32_lib = { path = "../x32_lib" }
osc_lib = { path = "../osc_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = []
midi = ["dep:midir"]
