[package]
name = "x32_midi2osc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
midir = "0.10.3"
osc_lib = { version = "0.1.0", path = "../osc_lib" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
x32_lib = { version = "0.1.0", path = "../x32_lib" }

[dev-dependencies]
tempfile = "3.27.0"
