[package]
name = "x32_punch_control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
osc_lib = { version = "0.1.0", path = "../osc_lib" }
tokio = { version = "1.50.0", features = ["full"] }
x32_lib = { version = "0.1.0", path = "../x32_lib" }

[dev-dependencies]
tempfile = "3.27.0"
