[package]
name = "x32_reaper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
x32_lib = { path = "../x32_lib" }
osc_lib = { path = "../osc_lib" }
