[package]
name = "x32_ssavergw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
x32_lib = { path = "../x32_lib" }
osc_lib = { path = "../osc_lib" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
escargot = "0.5"
