[package]
name = "x32_tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
osc_lib = { version = "0.1.0", path = "../osc_lib" }
x32_lib = { version = "0.1.0", path = "../x32_lib" }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
escargot = "0.5.8"
