[package]
name = "x32_usb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
osc_lib = { path = "../osc_lib" }
x32_lib = { path = "../x32_lib" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
x32_emulator = { path = "../x32_emulator" }
escargot = "0.5"
