[package]
name = "x32_wav_xlive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
hound = "3.5.1"
byteorder = "1.5.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
escargot = "0.5"
