[package]
name = "xair_command"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
osc_lib = { path = "../osc_lib" }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
escargot = "0.5"
tempfile = "3.3"