[package]
name = "x32_vocal_ducking"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
x32_core = { workspace = true }

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
x32_lib = { workspace = true }
osc_lib = { workspace = true }
rustfft = "6.1.0"
thread-priority = "1.1.0"

[lints]
workspace = true
