[package]
name = "x32_volunteer"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
x32_core = { workspace = true }

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
x32_lib = { workspace = true }
osc_lib = { workspace = true }
tokio = { version = "1.0", features = ["full", "macros"] }
ratatui = "0.24"
crossterm = "0.27"
