[package]
name = "x32_jog4xlive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
anyhow = "1.0.86"
osc_lib = { path = "../osc_lib" }
x32_lib = { path = "../x32_lib" }
tokio = { version = "1.39.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
